--- a/package.json
+++ b/package.json
@@ -3,12 +3,9 @@
   "version": "1.0.0",
   "description": "REST API Node JS",
   "main": "index.js",
-  "engines": {
-    "node": "14.x"
-  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "nodemon ."
   },
   "author": "Rancha Adzany",
   "license": "ISC",
